# browser-devtools-mcp-demo

./: .gitignore  README.md
GithubWhisper/backend/src/: __init__.py  main.py
GithubWhisper/frontend/: index.html
GithubWhisper/frontend/src/: main.tsx
GithubWhisper/frontend/src/analytics/: commitStats.ts  healthScore.ts  insights.ts
GithubWhisper/frontend/src/api/: github.ts
GithubWhisper/frontend/src/components/: app-sidebar.tsx  github-chatbot.tsx  github-username-modal.tsx  nav-user.tsx  stress-analyzer.tsx  theme-toggle.tsx
GithubWhisper/frontend/src/pages/: AnalyticsPage.tsx  DashboardPage.tsx
github-chat-backend/: __init__.py  agent.py  github_mcp.py  github_tools.py  main.py  mcp_client.py  pyproject.toml  pyrightconfig.json  pyvenv.cfg  requirements.txt  tool_registry.py
github-chat-backend/src/: __init__.py  agent.py  cli.py  main.py  server.py
github-whisper/backend/: pyproject.toml  requirements.txt
github-whisper/backend/skills/: core.md  issues-prs.md  repository.md  security-notifications.md  tools-reference.md
github-whisper/backend/src/: agent.py  cli.py  modular_skill_loader.py  server.py
github-whisper/frontend/: tailwind.config.js
github-whisper/frontend/src/: App.tsx
github-whisper/frontend/src/analytics/: busFactor.ts  commitStats.ts
pure-js/todo-app/: README.md  package-lock.json  package.json  server.js
pure-js/todo-app/jaeger/: jaeger.yml  run-jaeger.sh
pure-js/todo-app/public/: app.js  history.html  history.js  index.html  style.css
react-app/: index.html  package-lock.json  package.json
react-app/src/: App.tsx  index.css  main.tsx
react-app/src/analytics/: busFactor.ts  healthScore.ts  insights.ts
react-app/src/components/: app-sidebar.tsx  chart-area-interactive.tsx  data-table.tsx  github-chatbot.tsx  nav-user.tsx  repo-table.tsx  search-github-user.tsx  site-header.tsx  stress-analyzer.tsx
react-app/src/pages/: AnalyticsPage.tsx  DashboardPage.tsx  LifecyclePage.tsx
(+23 files in other folders)
